--- a/views/dashboard_page.ejs
+++ b/views/dashboard_page.ejs
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Login - CMS</title>
+    <title>Dashboard - CMS</title>
   </head>
 
   <body>
