--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,17 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
-    <a class="navbar-brand" href="/urls">CMS</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <a class="navbar-brand" href="/login">CMS</a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <% if(typeof user !== "undefined" && user){ %>
